# aurora-wallpaper

./: .gitignore  Cargo.toml  LICENSE  README.md
app/: Cargo.toml
app/src/: app.rs  main.rs
app/src/domain/: mod.rs  wallpaper.rs
app/src/features/: import_video.rs  mod.rs  player_control.rs  remove_wallpaper.rs  thumbnail.rs
app/src/infrastructure/: mod.rs  storage.rs
app/src/ui/: header.rs  mod.rs  wallpaper_card.rs  window.rs
gnome-extension/: extension.js  metadata.json
packaging/deb/: aurora-video-wallpaper_1.0.0.deb
packaging/deb/aurora-video-wallpaper_1.0.0/DEBIAN/: control
packaging/deb/aurora-video-wallpaper_1.0.0/usr/share/applications/: aurora-wallpaper.desktop
player/: Cargo.toml
player/src/: dbus.rs  main.rs  player.rs  window_monitor.rs
shared/: Cargo.toml
shared/src/: lib.rs
snap/: snapcraft.yaml
snap/local/: aurora-wallpaper.desktop
