[package]
name = "aurora-wallpaper"
version = "0.1.0"
edition = "2021"
description = "Animated video wallpaper manager for Linux / GNOME"
license = "GPL-3.0"

[[bin]]
name = "aurora-wallpaper"
path = "src/main.rs"

[dependencies]
gtk = { package = "gtk4", version = "0.8" }
adw = { package = "libadwaita", version = "0.6" }
glib = "0.19"
gstreamer = "0.22"
gstreamer-app = "0.22"
gstreamer-video = "0.22"
png = "0.17"
gio = { package = "gio", version = "0.19" }

# Serialisation for JSON library storage.
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# XDG base directory resolution (~/.local/share/aurorawall).
dirs = "5"