[package]
name = "aurora-player"
version = "0.1.0"
edition = "2021"
description = "Video renderer process for Aurora Wallpaper"
license = "MIT"

[[bin]]
name = "aurora-player"
path = "src/main.rs"

[dependencies]
gtk = { package = "gtk4", version = "0.8" }
gdk = { package = "gdk4", version = "0.8" }
gdk-x11 = { package = "gdk4-x11", version = "0.8" }
glib = "0.19"
aurora-shared = { path = "../shared" }
libmpv = { version = "2.0.2-fork.1", package = "libmpv-sirno" }
libc = "0.2"
x11 = { version = "2.21", features = ["xlib", "xinerama"] }